[UI] have the spinner in base.html
Instead of inserting spinner in every page, it will be better to have in the base.html itself.
- Adds new CSS class spinner-wait-ts
- Defines the JS variable waitSpinner

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -227,9 +227,11 @@
     {% block pagebanner %}{% endblock %} 
     {% block navigation %}{% endblock %} 
     {% block pagecontent %}{% endblock %}
+    <div class="spinner spinner-lg spinner-wait-ts" style="display:none"></div>
   </div>
 
   <script>
+    var waitSpinner = null
     $(document).ready(function () {
       // Initialize the vertical navigation
       $().setupVerticalNavigation(true);
@@ -238,6 +240,7 @@
         e.preventDefault();
         $('#about-modal').modal('show');
       });
+      waitSpinner = $('.spinner-wait-ts')
     });
   </script>
 
