[UI] Add package_view.html
- This adds template for details of a package
- Moves required templatetag templates from stats to packages
- Show everything inside a panel
- Adds panels for branch_mapping, stats, graph, stats diff
- Change all the icons to pficon or fa
- Show blank-state-pf if stats are not generated

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -52,6 +52,21 @@
     background-color: inherit;
     border: none;
 }
+
+.graph-area-ts {
+    width:100%;
+    min-height:600px
+}
+
+.panel-border-ts {
+    overflow-x: auto;
+    border-color: #39a5dc;
+}
+
+.panel-footer {
+    overflow: auto
+}
+
 /*
 body {
     padding-top: 50px;
