--- a/dashboard/templates/stats/_workload_combined.html
+++ b/dashboard/templates/stats/_workload_combined.html
@@ -1,7 +1,7 @@
 <table class="table table-bordered table-hover">
     <thead>
       <tr>
-        <th>&nbsp;</th>
+        <th colspan="2">&nbsp;</th>
         {% for header in headers %}
             <th>{{ header }}</th>
         {% endfor %}
@@ -10,7 +10,8 @@
     <tbody>
       {% for package in packages %}
       <tr>
-        <td width="20%">{{ package.0 }}</td>
+        <td width="2%">{{ forloop.counter }}</td>
+        <td width="18%">{{ package.0 }}</td>
         <td width="20%">{{ package.1.Total }}&nbsp;<span class="text-muted">messages</span></td>
         <td width="20%">{{ package.1.Translated }}</td>
         <td width="20%">{{ package.1.Untranslated }}</td>
