locale option to releases

--- a/dashboard/templates/settings/transplatforms.html
+++ b/dashboard/templates/settings/transplatforms.html
@@ -53,7 +53,7 @@
                 <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
             </p>
             {% if platform.projects_lastupdated %}
-            <p><span style="color:grey">Last updated</span> {{ platform.projects_lastupdated|timesince }}
+            <p><span style="color:grey">Last Sync</span> {{ platform.projects_lastupdated|timesince }}
                 <span style="color:grey">ago</span>.
                 <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
             </p>
