[UI] Add edit package section
- Possible to edit upstream_url, transplatform_slug, release_streams, release_branch_mapping
- Validates if the package exist on the selected translation platforms

Signed-off-by: Bhavin Gandhi <bhavin192@redhat.com>

--- a/dashboard/templates/packages/package_list.html
+++ b/dashboard/templates/packages/package_list.html
@@ -170,7 +170,7 @@
           </button>
           <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownKebabRight">
             <li>
-              <a href="#">Edit</a>
+              <a href="{% url 'package-update' package.package_name %}">Edit</a>
             </li>
           </ul>
         </div>
