--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -10,7 +10,7 @@ function getUrlVars(){for(var t,e=[],s=window.location.href.slice(window.locatio
 {% block navigation %}
     <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-dashboard"></i></a>
     <a href="{% url 'jobs' %}" class="btn btn-default">Jobs</a>
-    <div class="btn btn-default disabled">Sync Jobs</div>
+    <div class="btn btn-default disabled">Predefined Jobs</div>
 {% endblock %}
 
 {% block tabcontent %}
