--- a/dashboard/templates/settings/languages.html
+++ b/dashboard/templates/settings/languages.html
@@ -66,6 +66,7 @@
         <thead><tr>
             <th>Language</th>
             <th>Locale</th>
+            <th>Script</th>
             <th>Alias</th>
             <th>Sets</th>
             <th>Status</th>
@@ -75,6 +76,11 @@
         <tr>
             <td>{{ lang.lang_name }}</td>
             <td>{{ lang.locale_id }}</td>
+            <td>
+                {% if lang.locale_script %}
+                    {{ lang.locale_script }}
+                {% endif %}
+            </td>
             <td>
                 {% if lang.locale_alias %}
                     {{ lang.locale_alias }}
