--- a/dashboard/templates/jobs/_job_form.html
+++ b/dashboard/templates/jobs/_job_form.html
@@ -216,9 +216,9 @@
       <div class="col-xs-12">
         <div class="col-md-12">
           <button class="btn btn-default prevBtn pull-left" type="button">Previous</button>
-          <span style="padding-left:50px">
+          <span style="padding-left:10px">
             <label class="checkbox-inline"><input id="chkDryRun" type="checkbox" value="NoSave" checked> Dry Run
-                <small>(<i>If checked, derived stats will not be saved.</i>)</small></label>
+                <small>(<i>Stats will not be saved.</i>)</small></label>
             <!--<label class="checkbox-inline"><input type="checkbox" value="cache">Enable Cache</label>-->
           </span>
           <button id="fireJobLink" class="btn btn-default pull-right">
@@ -226,7 +226,7 @@
             <span id="span-job-progress"></span> Run Job
           </button>
           <span id="div-reset-button" class="pull-right" style="padding-left:10px;padding-right:10px"></span>
-          <span id="job-result" class="pull-right" style="padding-right:10px"></span>
+          <span id="job-result" class="pull-right" style="padding-right:5px"></span>
           <hr/>
           <div class="row">
               <div class="col-md-12 col-md-offset-0">
