--- a/dashboard/templates/jobs/archive.html
+++ b/dashboard/templates/jobs/archive.html
@@ -2,37 +2,7 @@
 
 {% block extrascript %}
 <script type="text/javascript">
-    var activateAccordion = function (id) {
-        // Get the parents
-        var parents = $('a[href="#' + id + '"]').parents('.panel-group').children('.panel');
-
-        // Go through each of the parents
-        $.each(parents, function (idx, obj) {
-            // Check if the child exists
-            var find = $(obj).find('a[href="#' + id + '"]'),
-                children = $(obj).children('.panel-collapse');
-
-            if (find.length > 0) {
-                // Show the selected child
-                children.removeClass('collapse');
-                children.addClass('in');
-            } else {
-                // Hide the others
-                children.removeClass('in');
-                children.addClass('collapse');
-            }
-        });
-    };
-
-    function getUrlVars() {
-        for (var e, t = [], a = window.location.href.slice(window.location.href.indexOf("?") + 1).split("&"), s = 0; s < a.length; s++) e = a[s].split("="), t.push(e[0]), t[e[0]] = e[1];
-        return t
-    };
-
-    $(document).ready(function() {
-        $('#tab-archive').addClass('active');
-        getUrlVars().id && activateAccordion(getUrlVars().id);
-    })
+    var activateAccordion=function(l){var a=$('a[href="#'+l+'"]').parents(".panel-group").children(".panel");$.each(a,function(a,e){var n=$(e).find('a[href="#'+l+'"]'),r=$(e).children(".panel-collapse");0<n.length?(r.removeClass("collapse"),r.addClass("in")):(r.removeClass("in"),r.addClass("collapse"))})};function getUrlVars(){for(var a,e=[],n=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),r=0;r<n.length;r++)a=n[r].split("="),e.push(a[0]),e[a[0]]=a[1];return e}$(document).ready(function(){$("#tab-archive").addClass("active"),getUrlVars().id&&activateAccordion(getUrlVars().id)});
 </script>
 {% endblock %}
 
