--- a/dashboard/templates/jobs/jobs_yml_based.html
+++ b/dashboard/templates/jobs/jobs_yml_based.html
@@ -3,111 +3,11 @@
 
 {% block extrascript %}
 <style type="text/css">
-    li {
-      margin-left: 2px;
-    }
-    .stepwizard-step p{
-        margin-top:10px
-    }
-    .stepwizard-row{
-        display:table-row
-    }
-    .stepwizard{
-        display:table;
-        width:50%;
-        position:relative
-    }
-    .stepwizard-step button[disabled]{
-        opacity:1!important;
-        filter:alpha(opacity=100)!important
-    }
-    .stepwizard-row:before{
-        top:14px;
-        bottom:0;
-        position:absolute;
-        content:" ";
-        width:100%;
-        height:1px;
-        background-color:#ccc;
-        z-order:0
-    }
-    .stepwizard-step{
-        display:table-cell;
-        text-align:center;
-        position:relative
-    }
-    .btn-circle{
-        width:30px;
-        height:30px;
-        text-align:center;
-        padding:6px 0;
-        font-size:12px;
-        line-height:1.428571429;
-        border-radius:15px
-    }
-    .scrollable-panel{
-        height:600px;
-        overflow-y:scroll;
-        width:100%
-    }
+    li{margin-left:2px}.stepwizard-step p{margin-top:10px}.stepwizard-row{display:table-row}.stepwizard{display:table;width:50%;position:relative}.stepwizard-step button[disabled]{opacity:1!important;filter:alpha(opacity=100)!important}.stepwizard-row:before{top:14px;bottom:0;position:absolute;content:" ";width:100%;height:1px;background-color:#ccc;z-order:0}.stepwizard-step{display:table-cell;text-align:center;position:relative}.btn-circle{width:30px;height:30px;text-align:center;padding:6px 0;font-size:12px;line-height:1.428571429;border-radius:15px}.scrollable-panel{height:600px;overflow-y:scroll;width:100%}
 </style>
 <script src="/static/js/csrf.js"></script>
 <script type="text/javascript">
-    function csrfSafeMethod(e) {
-        return /^(GET|HEAD|OPTIONS|TRACE)$/.test(e)
-    }
-
-    function getUrlVars() {
-        for (var e, t = [], a = window.location.href.slice(window.location.href.indexOf("?") + 1).split("&"), s = 0; s < a.length; s++) e = a[s].split("="), t.push(e[0]), t[e[0]] = e[1];
-        return t
-    }
-
-    function ajax_job_template(jobTemplateValue) {
-        $.ajax({
-            beforeSend: function(e, t) {
-                csrfSafeMethod(t.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"))
-            },
-            type: "POST",
-            url: "{% url 'ajax-job-template' %}",
-            data: {
-                template: jobTemplateValue
-            },
-            success: function(e) {
-                e && $("#jobTemplate").html(e)
-            }
-        })
-    }
-
-    $(document).ready(function() {
-        $("#tab-yml-based").addClass("active"),
-        getUrlVars().template && ajax_job_template(getUrlVars().template);
-        var e = $("div.setup-panel div a"),
-            t = $(".setup-content"),
-            a = $(".nextBtn"),
-            s = $(".prevBtn");
-        t.hide(), e.click(function(a) {
-            a.preventDefault();
-            var s = $($(this).attr("href")),
-                r = $(this);
-            r.hasClass("disabled") || (e.removeClass("btn-primary").addClass("btn-default"), r.addClass("btn-primary"), t.hide(), s.show(), s.find("input:eq(0)").focus())
-        }), s.click(function() {
-            var e = $(this).closest(".setup-content").attr("id");
-            $('div.setup-panel div a[href="#' + e + '"]').parent().prev().children("a").removeAttr("disabled").trigger("click")
-        }), a.click(function() {
-            var e = $(this).closest(".setup-content"),
-                t = e.attr("id"),
-                a = $('div.setup-panel div a[href="#' + t + '"]').parent().next().children("a"),
-                s = e.find("input[type='text'],input[type='url']"),
-                r = !0;
-            $(".form-group").removeClass("has-error");
-            for (var n = 0; n < s.length; n++) s[n].validity.valid || (r = !1, $(s[n]).closest(".form-group").addClass("has-error"));
-            r && a.removeAttr("disabled").trigger("click")
-        }), $("div.setup-panel div a.btn-primary").trigger("click"), $(function() {
-            $(".dropdown-menu a").click(function() {
-                console.log($(this).attr("data-value")), $(this).closest(".dropdown").find("input.options").val($(this).attr("data-value"))
-            })
-        })
-    });
+    function csrfSafeMethod(t){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(t)}function getUrlVars(){for(var t,e=[],a=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),r=0;r<a.length;r++)t=a[r].split("="),e.push(t[0]),e[t[0]]=t[1];return e}function ajax_job_template(t){$.ajax({beforeSend:function(t,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?t.setRequestHeader("X-CSRFToken",csrftoken):t.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-job-template' %}",data:{template:t},success:function(t){t&&$("#jobTemplate").html(t)}})}$(document).ready(function(){$("#tab-yml-based").addClass("active"),getUrlVars().template&&ajax_job_template(getUrlVars().template);var r=$("div.setup-panel div a"),n=$(".setup-content"),t=$(".nextBtn"),e=$(".prevBtn");n.hide(),r.click(function(t){t.preventDefault();var e=$($(this).attr("href")),a=$(this);a.hasClass("disabled")||(r.removeClass("btn-primary").addClass("btn-default"),a.addClass("btn-primary"),n.hide(),e.show(),e.find("input:eq(0)").focus())}),e.click(function(){var t=$(this).closest(".setup-content").attr("id");$('div.setup-panel div a[href="#'+t+'"]').parent().prev().children("a").removeAttr("disabled").trigger("click")}),t.click(function(){var t=$(this).closest(".setup-content"),e=t.attr("id"),a=$('div.setup-panel div a[href="#'+e+'"]').parent().next().children("a"),r=t.find("input[type='text'],input[type='url']"),n=!0;$(".form-group").removeClass("has-error");for(var i=0;i<r.length;i++)r[i].validity.valid||(n=!1,$(r[i]).closest(".form-group").addClass("has-error"));n&&a.removeAttr("disabled").trigger("click")}),$("div.setup-panel div a.btn-primary").trigger("click"),$(function(){$(".dropdown-menu a").click(function(){console.log($(this).attr("data-value")),$(this).closest(".dropdown").find("input.options").val($(this).attr("data-value"))})})});
 </script>
 {% endblock %}
 
