--- a/dashboard/templates/stats/trans_status_package.html
+++ b/dashboard/templates/stats/trans_status_package.html
@@ -36,8 +36,8 @@
       </button>
       <ul class="dropdown-menu">
         <li><a id="syncTransplatformLink" data-toggle="tooltip" title="Sync with translation platform"><input type="hidden" value="syncPlatform" id="syncPackageIdentifier"/>Translation Platform</a></li>
-        <li><a href="{% url 'jobs' %}?package={{ package_name }}" data-toggle="tooltip" title="Sync with {{ package_name }} source repo">Upstream Repository</a></li>
-        <li><a href="{% url 'jobs-yml-based' %}?package={{ package_name }}" data-toggle="tooltip" title="Sync with build system">Release Build System</a></li>
+        <li><a href="{% url 'jobs-yml-based' %}?template=syncupstream&package={{ package_name }}" data-toggle="tooltip" title="Sync with {{ package_name }} source repo">Upstream Repository</a></li>
+        <li><a href="{% url 'jobs-yml-based' %}?template=syncdownstream&package={{ package_name }}" data-toggle="tooltip" title="Sync with build system">Release Build System</a></li>
       </ul>
     </span>
     <span class="btn-group">
