--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -67,6 +67,16 @@
     overflow: auto
 }
 
+.card-releases-ts {
+    box-shadow: 0px 0px 3px 2px rgba(3, 3, 3, 0.175);
+}
+
+@media (min-width: 992px){
+    .list-view-pf .list-group-item-heading {
+        font-size: initial;
+    }
+}
+
 /*
 body {
     padding-top: 50px;
