--- a/dashboard/templates/settings/languages.html
+++ b/dashboard/templates/settings/languages.html
@@ -85,7 +85,7 @@
                 {% if lang.locale_alias %}
                     {{ lang.locale_alias }}
                 {% else %}
-                    <button class="btn btn-small btn-link" type="button">Add</button>
+                    &nbsp;
                 {% endif %}
             </td>
             <td>
